# opre_bead_2

./: CMakeLists.txt  main.c  main.cpp
client/: client.c
communication/: pipe.c  pipe.h
server/: server.c  server.h
server/client/: client.c  client.h
server/communication/: pipe.c  pipe.h
server/create/: create.c  create.h
server/delete/: delete.c  delete.h
server/file/: file.c  file.h
server/filter/: filter.c  filter.h
server/menu/: menu.c  menu.h
server/model/: boolean.h  order.h
server/print/: print.c  print.h
server/read/: read.c  read.h
server/select/: select.c  select.h
server/simulation/: simulatedOrders.c  simulatedOrders.h
server/update/: update.c  update.h
